<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".ui.view.CollectorDetail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin_content"
            android:paddingTop="@dimen/activity_vertical_margin_content"
            android:paddingRight="@dimen/activity_horizontal_margin_content"
            android:paddingBottom="@dimen/activity_vertical_margin_content">

            <ProgressBar
                android:id="@+id/progress_bar_collector_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/collectorDetailImageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/nav_header_desc"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:srcCompat="@drawable/ic_user_circle" />

            <TextView
                android:id="@+id/collector_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/collector_telephone" />

            <TextView
                android:id="@+id/collectorEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/collector_email" />

            <TextView
                android:id="@+id/collectorDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collector_description" />

            <TextView
                android:id="@+id/collectorAlbumTracks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:text="@string/collector_album_list"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/collector_album_list_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:padding="8dp"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/collectorPerformerTracks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:text="@string/collector_artist_list"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/collector_performer_list_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:padding="8dp"
                android:scrollbars="vertical" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>