<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:foreground="?attr/selectableItemBackground">

    <ImageView
        android:id="@+id/album_image"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/album_svgrepo_com"
        android:scaleType="centerCrop"
        android:contentDescription="@string/album_cover" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/album_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/album_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/album_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/album_release_date"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
